Pixlee integration iphone not rendering fix

--- a/src/pages/home/home-page.css
+++ b/src/pages/home/home-page.css
@@ -40,11 +40,13 @@
 
 .gallery-wrap iframe {
   height: 500px !important;
+  min-width: 100%;
 }
 
 .feed {
   width: 100%;
   margin-bottom: 120px;
+  overflow: hidden;
 }
 
 .as-seen-in {
